# lab_2

./: .gitignore  .~lock.report.docx#  1  2  3  CMakeLists.txt  Calculator  ConsoleApplication1.cpp  ConsoleApplication1.sln  Documentation.docx  GNUmakefile  Header.h  Lab2.cpp  Lab2.h  Laba 2 Terentiev.docx  Makefile  Makefile.txt  MathFunction.cpp  Pr.txt  README  README.md  README_ОТЧЕТ.txt  SolveFIle  TypeFunction.cpp  a.out  answer  cac.cpp  cac.h  calc.cpp  calc.h  calc_lib.cpp  calc_lib.h  calcfunc.cpp  calcfunc.h  calcul.cpp  calcul.txt  calculator  calculator.cpp  calculator.h  calculopn.txt  (+67 more)
ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj  Makefile
ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
ConsoleApplication1/ConsoleApplication1/x64/Debug/: Calc.exe.recipe  Calc.ilk  ConsoleApplication1.exe.recipe  vc143.idb
ConsoleApplication1/x64/Debug/: ConsoleApplication1.exe.recipe  ConsoleApplication1.ilk  vc143.idb
ConsoleApplication1/x64/Debug/ConsoleA.b2ac152d.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GoogleTest/: CMakeLists.txt  test.cpp
Google_tests/: CMakeLists.txt  test.cpp
Lab2v2/: func.cpp  helloWorld  main.cpp  makefile
ProgramFiles/: fileForTest.txt  func.cpp  func.h  helloWorld  main.cpp  makefile
dop/: 1.txt  Makefile  dop.cpp
lab__2/: CMakeLists.txt  Makefile  func.cpp  header.h  main.cpp
(+9 files in other folders)
